--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<nav>
+  <a routerLink="/home">Home</a> |
+  <a routerLink="/dashboard">Dashboard</a> |
+  <a routerLink="/items">Item List</a> |
+  <a routerLink="/item/create">Create Item</a> |
+</nav>
