--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -3,4 +3,5 @@
   <a routerLink="/dashboard">Dashboard</a> |
   <a routerLink="/items">Item List</a> |
   <a routerLink="/item/create">Create Item</a> |
+  <a routerLink="/item/search">Search Item</a> |
 </nav>
